[gd_scene load_steps=4 format=3 uid="uid://bb76auym623tk"]

[ext_resource type="Script" path="res://Weapons/base_weapon.gd" id="1_ptvrp"]
[ext_resource type="Texture2D" uid="uid://b28liu0vidi1r" path="res://icon.svg" id="2_03aqi"]
[ext_resource type="PackedScene" uid="uid://immewsood0nw" path="res://Weapons/base_bullet.tscn" id="2_m1hb7"]

[node name="BaseWeapon" type="Node2D" groups=["weapons"]]
rotation = 1.5708
script = ExtResource("1_ptvrp")
bullet_scene = ExtResource("2_m1hb7")

[node name="Image" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_03aqi")
region_rect = Rect2(0.604588, 17.2939, 14.8792, 14.3887)

[node name="WeaponTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="WeaponTimer" to="." method="_on_weapon_timer_timeout"]
